--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "client/build"
-  command = "npm run build"
+  command = "chmod +x build.sh && ./build.sh"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -8,9 +8,4 @@
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200
-
-[dev]
-  command = "npm run dev"
-  port = 3000
-  publish = "client/build" 
+  status = 200 
