--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server/index.js",
     "client": "cd client && npm start",
-    "build": "cd client && npm run build",
-    "install-all": "npm install && cd client && npm install"
+    "build": "npm install && cd client && npm install && npm run build",
+    "install-all": "npm install && cd client && npm install",
+    "postinstall": "cd client && npm install"
   },
   "keywords": ["job-portal", "react", "nodejs", "express"],
   "author": "Job Portal Team",
@@ -25,5 +26,9 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "concurrently": "^8.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 } 
